# oaplugins

./: .gitignore  Cargo.toml  README.md  justfile  package.json
crates/macro/: Cargo.toml  justfile
crates/macro/assets/: manifest.json
crates/macro/pi/: package.json  tsconfig.json
crates/macro/pi/src/: app.html
crates/macro/pi/src/routes/: layout.css
crates/macro/pi/src/routes/keyboard/: +page.svelte
crates/macro/pi/src/routes/mouse/: +page.svelte
crates/macro/src/: main.rs
crates/ytmd/: Cargo.toml  README.md  justfile
crates/ytmd-companion/: Cargo.toml  README.md
crates/ytmd-companion/src/: client.rs  error.rs
crates/ytmd-companion/src/models/: request.rs  response.rs
crates/ytmd/assets/: manifest.json
crates/ytmd/pi/: package.json  tsconfig.json
crates/ytmd/src/: actions.rs  client.rs  main.rs
crates/ytmd/src/actions/: next.rs  play_pause.rs  playback_volume.rs  previous.rs  repeat.rs  shuffle.rs  volume_control.rs
pi/src/lib/: ApplicationSettings.svelte
pi/src/routes/: layout.css
src/: actions.rs  client.rs  main.rs  ws_events.rs
src/actions/: next.rs  play_pause.rs  previous.rs  repeat.rs  shuffle.rs  volume_control.rs
ytmd-companion/: Cargo.toml
ytmd-companion/src/: client.rs
ytmd-companion/src/models/: request.rs  response.rs  shared.rs
