[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
edition = "2024"
authors = ["Tuan Nguyen <@justmangoou>"]
license = "MIT"

[workspace.dependencies]
ytmd-companion = { path = "crates/ytmd-companion" }

openaction = "2.6"

tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

enigo = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json"] }
rust_socketio = { version = "*", features = ["async"] }

log = "0.4"
simplelog = "0.12"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
