[package]
name = "oamacro"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openaction.workspace = true
enigo = { workspace = true, features = ["wayland", "serde"] }

tokio = { workspace = true, features = ["time"] }

serde.workspace = true
serde_json.workspace = true
