[package]
name = "ytmd-companion"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
futures-util.workspace = true

reqwest.workspace = true
rust_socketio.workspace = true

serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true

thiserror.workspace = true
