[package]
name = "oaytmd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ytmd-companion.workspace = true

openaction.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true
simplelog.workspace = true
