[package]
name = "oaytmd"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ytmd-companion.workspace = true

openaction.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true
simplelog.workspace = true
